@@ -1,16 +1,18 @@
-$Id: ChangeLog,v 1.27 2007-08-07 16:17:38 cmatsuoka Exp $
+$Id: ChangeLog,v 1.28 2007-08-08 12:50:08 cmatsuoka Exp $
 
 Stable versions
 ---------------
 
 2.2.0 ()
 	- added more module format specs
+	- added CD61 Octalyser module support
+	- added Flextrax FLX module detection
 	- added Real Tracker module loader
 	- added portable, 64bit safe MMD0/1/2/3 MED loader
 	- enabled WAV writer
 	- removed broken shared lib generation
+	- removed packed structures anymore
 	- fixed long-standing bug in S3M BPM handling, "Panic" plays correctly
-	- don't use packed structures anymore
 	- fixed issues with OpenBSD
 	- fixed issues with 64-bit machines
 	- using Asle's Prowizard to handle packed MODs
